objects/Product_Specialty_Definition__c.object
<CustomObject>
    <description>Specialty Definition Object- This is child object to Specialty which contains all the definition records.</description>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>This field will display the 18-character case sensitive ID in application reports.</description>
        <formula>Id &amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>Opportunity Type- Similar to Opportunity field having the same values.</description>
        <inlineHelpText>Opportunity Type</inlineHelpText>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELA (HPSW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Specialty__c</fullName>
        <description>Specialty</description>
        <inlineHelpText>Specialty</inlineHelpText>
        <label>Specialty</label>
        <referenceTo>Product_Specialty__c</referenceTo>
        <relationshipLabel>Specialty Definitions</relationshipLabel>
        <relationshipName>Product_Specialty_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product- Look up to Product.</description>
        <inlineHelpText>Select Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Specialty Definitions</relationshipLabel>
        <relationshipName>Product_Specialty_Definition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <description>Route To Market - Similar to Opportunity Field having the same picklist values.</description>
        <inlineHelpText>Route To Market</inlineHelpText>
        <label>Go To Market</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Specialty Definition</label>
    <nameField>
        <displayFormat>PSD-{00000}</displayFormat>
        <label>Specialty Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialty Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>